--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@astrojs/mdx": "^0.19.7",
     "@astrojs/rss": "^2.4.4",
     "@astrojs/sitemap": "^2.0.2",
-    "astro": "^2.10.12"
+    "@astrojs/tailwind": "^4.0.0",
+    "@fontsource/inter": "^5.0.8",
+    "@tailwindcss/typography": "^0.5.9",
+    "astro": "^2.10.12",
+    "tailwindcss": "^3.3.3"
   }
 }
