--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "finland-blog",
   "type": "module",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -10,13 +10,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^0.19.7",
-    "@astrojs/rss": "^2.4.4",
-    "@astrojs/sitemap": "^2.0.2",
-    "@astrojs/tailwind": "^4.0.0",
+    "@astrojs/mdx": "^1.0.0",
+    "@astrojs/rss": "^3.0.0",
+    "@astrojs/sitemap": "^3.0.0",
+    "@astrojs/tailwind": "^5.0.0",
     "@fontsource/inter": "^5.0.8",
     "@tailwindcss/typography": "^0.5.9",
-    "astro": "^2.10.13",
+    "astro": "^3.0.2",
+    "sharp": "^0.32.5",
     "tailwindcss": "^3.3.3"
   }
 }
