--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "astro": "^3.0.2",
     "sharp": "^0.32.5",
     "tailwindcss": "^3.3.3"
-  }
+  },
+  "trustedDependencies": [
+    "sharp"
+  ]
 }
