--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^1.0.0",
+    "@astrojs/mdx": "^1.0.3",
+    "@astrojs/prefetch": "^0.4.0",
     "@astrojs/rss": "^3.0.0",
     "@astrojs/sitemap": "^3.0.0",
     "@astrojs/tailwind": "^5.0.0",
     "@fontsource/inter": "^5.0.8",
-    "@tailwindcss/typography": "^0.5.9",
-    "astro": "^3.0.5",
+    "@tailwindcss/typography": "^0.5.10",
+    "astro": "^3.0.13",
     "sharp": "^0.32.5",
     "tailwindcss": "^3.3.3"
   },
